fix: change neotrial link

--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -71,7 +71,7 @@
                             </div>
                         </div>
 
-                        <h1><a href="https://demo.neotrial.com">neoTrial</a></h1>
+                        <h1><a href="https://neotrial.com/demo.html">neoTrial</a></h1>
                         <p>neoTrial is a modern, Web-based, full-featured SaaS CDMS (Clinical Data Management System).</p>
                         <p>Features:</p>
                         <ul>
