--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -25,7 +25,7 @@
             <div class="content">
                 <div class="scrolling">
                     <div class="article">
-                        <h1><a href="https://creativemaps.studio">Creativemaps</a></h1>
+                        <h1><a href="https://creativemaps.studio" target="_blank">Creativemaps</a></h1>
                         <p>The modern Web-based editor for creative vector maps.</p>
                         <p>Features:</p>
                         <ul>
@@ -71,7 +71,7 @@
                             </div>
                         </div>
 
-                        <h1><a href="https://neotrial.com/demo.html">neoTrial</a></h1>
+                        <h1><a href="https://neotrial.com/demo.html" target="_blank">neoTrial</a></h1>
                         <p>neoTrial is a modern, Web-based, full-featured SaaS CDMS (Clinical Data Management System).</p>
                         <p>Features:</p>
                         <ul>
@@ -135,7 +135,7 @@
                             </div>
                         </div>
 
-                        <h1><a href="https://semograph.com">Semograph</a></h1>
+                        <h1><a href="https://semograph.com" target="_blank">Semograph</a></h1>
                         <p>The powerfull Web-based CMS for large text corpora analysis.</p>
                         <p>Features:</p>
                         <ul>
